--- a/final.css
+++ b/final.css
@@ -1,23 +1,5 @@
-*This is the CSS page for our final template.*/
-body{
-    margin-top: 0px; 
-    margin-bottom: 0px; 
-    margin-left: 0px; 
-    margin-right: 0px;
-    padding: 0;
-    color: black; 
-    font-size: 10pt; 
-    font-family: "Lato", sans-serif;
-    background-color: #E2E2E2;
-}
+/*This is the CSS page for our final template.*/
 
-div.mainContainer{
-    height: auto; 
-    width: 68em;
-    background-color: #FFFFFF;
-    margin: 0 auto; 
-    padding: 0;
-}
 .header {
 	height: auto;
 	font-weight: bold;
@@ -25,13 +7,16 @@ div.mainContainer{
 	background-color: black;
 	color: white;
 	text-align: center;
-	font-family: 'Georgia', serif
-	margin-top: 0x;
+	font-family: 'Georgia', serif;
+	margin-top: 0px;
 }
 #dek {
 	font-style: italic;
 	font-size: 40px;
 	font-family: 'Georgia', serif;
+	font-family: 'Lato', sans-serif;
+font-family: 'Noto Serif NP Hmong', serif;
+font-family: 'Nunito Sans', sans-serif;
 }
 #image {
 	float: right;
